Add max image size validation
1. max image size validation : 업로드 가능한 최대 이미지 예외처리

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -68,8 +68,6 @@
                   <% } %>
               </ul>
             </div>
-
-
             <input type="button" value="삭제" class="deleteBtn" />
           <%
           }else{
@@ -90,7 +88,7 @@
 
 
 
-
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="/javascripts/config.js"></script>
     <script src="/javascripts/utility.js"></script>
     <script src="/javascripts/index.js"></script>
