Modify public/javascripts/index.js, views/index.ejs
1. public/javascripts/index.js : 코드 정리.
2. views/index.ejs : form area 수정.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,9 +15,9 @@
 
 
         <div class="formArea">
-            <label>Name</label>
+            <label>Name</label><br/>
             <input type="text" maxlength="10" class="nameInput" name="nameText" /><br/>
-            <label>Tag</label>
+            <label>Tag</label><br/>
             <input type="text" class="tagInput" name="tagText" /><br/>
             <input type="button" value="등록" id="submitBtn" />
         </div>
